--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,2 +1,6 @@
-name = "cloudflare-site"
+name = "barcode-battler"
 compatibility_date = "2025-03-01"
+main = "workers-site/index.js"
+
+[site]
+bucket = "./public"
